--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/leutamo/basic-ftp-implicit"
+    "url": "https://github.com/leutamo/basic-ftp-implicit.git"
   },
   "author": "Giancarlos Araya",
   "license": "MIT",
